tests/ui/pattern/type_mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/type_mismatch.rs:32:13
   |
LL |         let Either::Two(ref mut _t) = x;
   |             ^^^^^^^^^^^^^^^^^^^^^^^   - this expression has type `X`
   |             |
   |             expected `X`, found `Either`

error[E0308]: mismatched types
  --> $DIR/type_mismatch.rs:39:13
   |
LL |         let Either::Three { a: ref mut _t } = x;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   - this expression has type `X`
   |             |
   |             expected `X`, found `Either`

error[E0308]: mismatched types
  --> $DIR/type_mismatch.rs:50:9
   |
LL |     || match variant {
   |              ------- this expression has type `[(); 1]`
LL |         (2,) => (),
   |         ^^^^ expected `[(); 1]`, found `(_,)`
   |
   = note: expected array `[(); 1]`
              found tuple `(_,)`

error[E0308]: mismatched types
  --> $DIR/type_mismatch.rs:56:14
   |
LL |         let ((2,) | _) = variant;
   |              ^^^^        ------- this expression has type `[(); 1]`
   |              |
   |              expected `[(); 1]`, found `(_,)`
   |
   = note: expected array `[(); 1]`
              found tuple `(_,)`

error[E0308]: mismatched types
  --> $DIR/type_mismatch.rs:71:13
   |
LL |         match variant {
   |               ------- this expression has type `[(); 1]`
LL |             (Z(y@_),) => {}
   |             ^^^^^^^^^ expected `[(); 1]`, found `(_,)`
   |
   = note: expected array `[(); 1]`
              found tuple `(_,)`

error[E0308]: mismatched types
  --> $DIR/type_mismatch.rs:78:13
   |
LL |         match variant {
   |               ------- this expression has type `[(); 1]`
LL |             Meow::A { a: Z(y@_) } => {}
   |             ^^^^^^^^^^^^^^^^^^^^^ expected `[(); 1]`, found `Meow`

error[E0308]: mismatched types
  --> $DIR/type_mismatch.rs:85:13
   |
LL |         match variant {
   |               ------- this expression has type `[(); 1]`
LL |             Meow::B(Z(y@_)) => {}
   |             ^^^^^^^^^^^^^^^ expected `[(); 1]`, found `Meow`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0308`.
